# $Id: Changes,v 1.149 2004/10/19 03:32:56 markjugg Exp $
Revision history for Perl extension WWW::Mechanize

XXX

	[FIXES]
	* Upload <input type="file" ... > does not use the default
	  value to prevent attacks, patch by Jan Pazdziora (RT #7843).

	[INTERNALS]
	* Improve taint-safeness on Perl 5.6.1 (RT#8042, patch by Dominique Quatravaux)
	* Require URI 1.25, fixing bug which exposed itself in WWW::Mechanize (RT#3048)

1.05_02	Sat Oct  2 16:55:59 CDT 2004
	[ENHANCEMENTS]
	* Added the $mech->save_content( $filename ) function, so you
	  can dump stuff to files easily.

1.05_01 Thu Sep 30 21:04:44 CDT 2004

        [FIXES]
        * set_visible() doesn't stop setting values when it finds a zero.

        [ENHANCEMENTS]
        * WWW::Mechanize::Link has a new, easier to remember constructor
          interface. The old one is still supported. Support for including
          an 'alt' attribute was added, which is useful for <area> links.
          (RT #3317). Thanks to Mark Stosberg.

        * When links are extracted from <area> tags, the ALT attribute will
          be captured and become part of the WWW::Mechanize::Link object.
          (RT #3317). Patch by Mark Stosberg. 

        [INTERNALS]
        * t/mech-dump.t is now more portable (RT #7690)

        * t/local/follow.t has new tests to confirm that 'follow*' functions
          work with characters like o-umlaut, even when the o-umlaut is
          encoded in the HTML, but not in the call to follow(). (RT #2416)
          By Mark Stosberg.



1.04    Wed Sep 15 23:27:53 CDT 2004

        [ENHANCEMENTS]
        * $mech->get() now accepts a WWW::Mechanize::Link object.

        * $mech->stack_depth(n) lets you set the depth of the mech
          object's page stack.  This way, if you have a Mech that does
          lots of stuff and never/rarely goes back(), you won't be eating
          up memory.  Thanks to BooK and Chi-Fung. (RT #5362)

        [FIXES]
        * Fixed tests that fail under LWP >= 5.800.