@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.149 2004/10/19 03:32:56 markjugg Exp $
+# $Id: Changes,v 1.150 2004/10/20 01:54:28 markjugg Exp $
 Revision history for Perl extension WWW::Mechanize
 
 XXX
@@ -9,7 +9,12 @@ XXX
 
 	[INTERNALS]
 	* Improve taint-safeness on Perl 5.6.1 (RT#8042, patch by Dominique Quatravaux)
+
 	* Require URI 1.25, fixing bug which exposed itself in WWW::Mechanize (RT#3048)
+
+	* Move select() to better location in docs. Document and test the return values.
+	  The return value is now "1" on success instead of the undocumented behavior 
+	  of returning a form value. (RT#6138, spotted by MJD, patched by Mark Stosberg)
 
 1.05_02	Sat Oct  2 16:55:59 CDT 2004
 	[ENHANCEMENTS]
